--- a/index.html
+++ b/index.html
@@ -852,7 +852,6 @@
             const manualCopyInstruction = document.getElementById('manualCopyInstruction');
             const backBtn = document.getElementById('backBtn');
             const restartBtn = document.getElementById('restartBtn');
-            const header = document.querySelector('.header');
             
             const password = '@@@###';
             let wrongPasswordCount = 0;
@@ -973,7 +972,7 @@
                              card.classList.add('highlighted');
                              // এখানে নতুন লজিক যুক্ত করা হয়েছে
                              setTimeout(() => {
-                                 const headerHeight = header.offsetHeight;
+                                 const headerHeight = document.querySelector('.header').offsetHeight;
                                  const viewportHeight = window.innerHeight;
                                  const cardTop = card.getBoundingClientRect().top;
                                  const scrollPosition = window.scrollY + cardTop - (viewportHeight / 2) + (card.offsetHeight / 2) + (headerHeight / 2);
@@ -1085,7 +1084,7 @@
                 if (button && card) {
                     const totalTasks = parseInt(card.dataset.tasks);
                     
-                    let currentTasks = parseInt(card.dataset.current-tasks);
+                    let currentTasks = parseInt(card.dataset.currentTasks);
                     const videoLink = card.dataset.videoLink;
 
                     if (currentTasks === 0) {
