--- a/index.html
+++ b/index.html
@@ -1252,7 +1252,7 @@
                 if (button && card) {
                     const totalTasks = parseInt(card.dataset.tasks);
                     
-                    let currentTasks = parseInt(card.dataset.current-tasks);
+                    let currentTasks = parseInt(card.dataset.currentTasks);
                     const videoLink = card.dataset.videoLink;
 
                     if (currentTasks === 0) {
