--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
     /* Pagination CSS */
         .pagination-container {
             display: flex;
-            justify-content: flex-start;
+            justify-content: center;
             align-items: center;
             flex-wrap: nowrap;
             overflow-x: auto;
