--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <title>Viral Link Market</title>
   
     <script src='//libtl.com/sdk.js' data-zone='9823222' data-sdk='show_9823222'></script>
-  
+
+    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TMJDMSTLMX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TMJDMSTLMX');
+</script>
+
+    
     <style>
     /* টিউটোরিয়াল বাটনের জন্য CSS */
 .tutorial-button {
