--- a/index.html
+++ b/index.html
@@ -327,14 +327,14 @@
         }
         
         .card-views {
-            font-size: 14px;
-            color: #555;
-            margin-top: 5px;
-            text-align: center;
-            font-weight: bold;
-        }
-
-
+    font-size: 14px;
+    color: #555;
+    margin-top: 2px;   
+    margin-bottom: 2px; 
+    text-align: center;
+    font-weight: normal;  /* এই লাইনটি লেখাটিকে সাধারণ করবে */
+}
+        
         .card-image-container {
             width: 100%;
             height: 150px; 
