--- a/index.html
+++ b/index.html
@@ -578,13 +578,13 @@
         
         @media (min-width: 768px) {
             .container {
-                grid-template-columns: 1fr 1fr; 
+                grid-template-columns: 1fr 1fr 1fr; 
             }
         }
         
         @media (max-width: 767px) {
              .container {
-                grid-template-columns: 1fr 1fr; 
+                grid-template-columns: 1fr 1fr 1fr; 
                 gap: 10px;
             }
             .header h1 {
