--- a/index.html
+++ b/index.html
@@ -1546,7 +1546,8 @@
                  observer.observe(loadingSentinel);
             }
             
-            init();
-        });
+              init();
+            });
+     </script>
    </body>
 </html>
