--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Viral Link Market</title>
   
     <script src='//libtl.com/sdk.js' data-zone='9823222' data-sdk='show_9823222'></script>
-
   
     <style>
     /* টিউটোরিয়াল বাটনের জন্য CSS */
@@ -1546,7 +1545,8 @@
                  observer.observe(loadingSentinel);
             }
             
-            init();
-        });
+              init();
+            });
+     </script>
    </body>
 </html>
