--- a/step2.html
+++ b/step2.html
@@ -140,7 +140,7 @@
   <main>
     <div class="panel">
       <div class="headline-container">
-          <h1 class="headline" id="headline">অসাধারণ চমক এখানে...👉</h1>
+          <h1 class="headline" id="headline">পুরাই অস্থির মধু...👉</h1>
         
           <a href="https://www.google.com" id="specialVideoBtn" class="special-button">Special Video 🎬</a>
         
@@ -240,8 +240,8 @@
     const downloadBtn = document.getElementById('downloadBtn');
 
     // You can add links here
-    specialVideoBtn.href = "#"; // Replace with your desired Special Video link
-    downloadBtn.href = "#";      // Replace with your desired Download link
+    // **specialVideoBtn.href = "#"; // এই লাইনটি মুছতে হবে বা কমেন্ট করতে হবে**
+    // **downloadBtn.href = "#";      // এই লাইনটি মুছতে হবে বা কমেন্ট করতে হবে**
 
     // পেজ লোড হলে ভিডিও লিংক লোড করা শুরু
     window.addEventListener('load', () => {
