--- a/step2.html
+++ b/step2.html
@@ -133,14 +133,14 @@
   <header>
     <div class="wrap">
       <div class="title">ফাইনাল স্টেপ ফ্লো</div>
-      <div class="subtitle">মাথায় রাখবেন ভিডিও দেখে হাত মারলে নিজের ক্ষতি!😄</div>
+      <div class="subtitle">👉মাথায় রাখবেন-"হাত*মারলে" নিজের ক্ষতি!😄</div>
     </div>
   </header>
 
   <main>
     <div class="panel">
       <div class="headline-container">
-          <h1 class="headline" id="headline">পুরাই অস্থির মধু...👉</h1>
+          <h1 class="headline" id="headline">পুরাই অস্থির মধু মধু..👉</h1>
         
           <a href="https://www.google.com" id="specialVideoBtn" class="special-button">Special Video 🎬</a>
         
