--- a/step2.html
+++ b/step2.html
@@ -133,7 +133,7 @@
   <header>
     <div class="wrap">
       <div class="title">ফাইনাল স্টেপ ফ্লো</div>
-      <div class="subtitle">👉মাথায় রাখবেন-"হাত*মারলে" নিজের ক্ষতি!😄</div>
+      <div class="subtitle">👉মাথায় রাখবেন-ভিডিও দেখে "হাত*মারলে" নিজের ক্ষতি! 😄</div>
     </div>
   </header>
 
