--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
         <h2>ভাইরাল লিংক মার্কেটে আপনাকে.! 🔥"স্বাগতম"🔥</h2>
         <p>আপনার পছন্দের কার্ডের বাটনে ক্লিক করে Video 🔞 দেখুন!📥! "ধন্যবাদ"</p>
     </div>
-    <a href="https://youtube.com/shorts/wa8wV6NZZ6k?si=0R0QF7sxIYwKMHzn" class="tutorial-button">
+    <a href="https://youtube.com/shorts/6O0ktfOu3xo?si=ZdQztPqYn8Zq8NTv" class="tutorial-button">
         👉 Video কিভাবে দেখবেন-"Click-Tutorial" 🔞
     </a>
 </div>
