--- a/step2.html
+++ b/step2.html
@@ -157,6 +157,11 @@
       
       <a href="https://www.google.com" id="downloadBtn" class="download-button">Download 📥</a>
 
+      <div class="ad-container" style="margin-top: 20px; margin-bottom: 20px;">
+  <script async="async" data-cfasync="false" src="//pl27703152.revenuecpmgate.com/247476cdf6d68a31797ec615e7b10572/invoke.js"></script>
+  <div id="container-247476cdf6d68a31797ec615e7b10572"></div>
+</div>
+      
       <div class="article">
         <h3>সংবেদনশীল কনটেন্ট বিষয়ে সচেতনতা</h3>
         <p>ইন্টারনেটে কিছু বিষয় সবার জন্য উপযুক্ত নাও হতে পারে। তাই বয়স-সীমা, সম্মতি ও নিরাপত্তা সবসময় মাথায় রাখা জরুরি।</p>
