--- a/step2.html
+++ b/step2.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>টাইমার ফ্লো — এক্সক্লুসিভ কনটেন্ট</title>
+
+  <script type='text/javascript' src='//pl27703153.revenuecpmgate.com/a0/08/d1/a008d17e02685c0505877ed11b7610d9.js'></script>
+  
+  <script type='text/javascript' src='//pl27703154.revenuecpmgate.com/70/2c/67/702c67f9d1db58564142cc27691530f9.js'></script>
+  
   <style>
     :root{
       --bg:#f4f7fb;
