--- a/step1.html
+++ b/step1.html
@@ -192,7 +192,10 @@
           </div>
         </div>
       </div>
-  
+
+<script async="async" data-cfasync="false" src="//pl27703152.revenuecpmgate.com/247476cdf6d68a31797ec615e7b10572/invoke.js"></script>
+<div id="container-247476cdf6d68a31797ec615e7b10572"></div>
+      
       <article class="article" aria-label="সচেতনতামূলক লেখা">
         <h3>বাংলাদেশের বর্তমান প্রেক্ষাপটে প্রাপ্তবয়স্ক কন্টেন্ট বিষয়ক সচেতনতা</h3>
         <p>
