--- a/step1.html
+++ b/step1.html
@@ -186,7 +186,7 @@
         </div>
         <div class="action">
           <div class="hint" id="clickGuide">এখানে ক্লিক করুন ⤵︎</div>
-          <button id="nextBtn" class="btn reveal" disabled>🔒Unlock Video 📥</button>
+          <button id="nextBtn" class="btn reveal" disabled>🔒 Unlock This Video 📥</button>
           <div class="perma-note" id="permaNote">
            বিঃদ্রঃ: যদি বাটনে ক্লিক করার পর অন্য কোথাও যায়, তাহলে সেই ট্যাবে <strong>১৫ সেকেন্ড</strong> অপেক্ষা করে ব্যাক দিয়ে আবার বাটনে ক্লিক করলেই আপনার গন্তব্যে পৌঁছে যাবেন।
           </div>
