--- a/step1.html
+++ b/step1.html
@@ -94,7 +94,7 @@
     .count[aria-live]{min-width:3ch; text-align:right}
     .hint{color:var(--muted); font-size:13px}
     .action{
-      display:grid; gap:8px; margin-top:0px; /* <--- এখানে পরিবর্তন করা হয়েছে */
+      display:grid; gap:8px; margin-top:4px;
     }
     .btn{
       appearance:none; border:none; cursor:pointer;
@@ -151,13 +151,15 @@
       .btn{font-size:14px}
     }
 
-    /* 🔥 এখানে নতুন পরিবর্তন করা হয়েছে গ্যাপ কমানোর জন্য 🔥 */
-    #container-247476cdf6d68a31797ec615e7b10572 {
-        margin-top: 0 !important;
-        margin-bottom: 0 !important;
-        padding-top: 0 !important;
-        padding-bottom: 0 !important;
+    /* 👇 এখানে নতুন পরিবর্তন করা হয়েছে 👇 */
+    #timerCard {
+        margin-bottom: 1px;
     }
+
+    .article {
+        margin-top: 1px;
+    }
+
   </style>
 </head>
 <body>
