--- a/step1.html
+++ b/step1.html
@@ -150,16 +150,18 @@
       .step-label{font-size:12px}
       .btn{font-size:14px}
     }
-
-    /* 👇 এখানে নতুন পরিবর্তন করা হয়েছে 👇 */
-    #timerCard {
-        margin-bottom: 1px;
+  
+    /* 🔥 এখানে নতুন পরিবর্তন করা হয়েছে গ্যাপ কমানোর জন্য 🔥 */
+    #container-247476cdf6d68a31797ec615e7b10572 {
+        margin-top: 0 !important;
+        margin-bottom: 1px !important; /* <--- এই পরিবর্তনটা করা হয়েছে */
+        padding-top: 0 !important;
+        padding-bottom: 0 !important;
     }
 
     .article {
-        margin-top: 1px;
+        margin-top: 1px !important; /* <--- এই পরিবর্তনটা করা হয়েছে */
     }
-
   </style>
 </head>
 <body>
