--- a/step1.html
+++ b/step1.html
@@ -61,7 +61,7 @@
     }
     .section{
       display:grid;
-      gap: 4px; /* <--- 🔥 এখানে পরিবর্তন করা হয়েছে 🔥 */
+      gap: 12px;
     }
     .headline{
       font-size:22px; font-weight:800; letter-spacing:.3px;
@@ -98,7 +98,7 @@
     }
     .btn{
       appearance:none; border:none; cursor:pointer;
-      border-radius: 12px; padding:12px 16px; font-weight:800; font-size:15px;
+      border-radius: 16px; padding:12px 16px; font-weight:800; font-size:15px;
       background: linear-gradient(180deg, #1a6fff, #0f5be7);
       color:white; box-shadow: 0 10px 18px rgba(26,111,255,.2), inset 0 0 0 1px rgba(255,255,255,.18);
       transition: transform .08s ease, box-shadow .2s ease, filter .2s ease;
@@ -199,21 +199,21 @@
       <article class="article" aria-label="সচেতনতামূলক লেখা">
         <h3>বাংলাদেশের বর্তমান প্রেক্ষাপটে প্রাপ্তবয়স্ক কন্টেন্ট বিষয়ক সচেতনতা</h3>
         <p>
-          ইন্টারনেটের ব্যবহার অত্যন্ত সংবেদনশীল। যেকোনো কন্টেন্ট দেখার আগে এর <strong>বয়স–উপযুক্ততা</strong>, <strong>সম্মতি (consent)</strong> এবং <strong>আইন</strong>—এই তিনটি বিষয়ে সতর্ক থাকা জরুরি। আপনি বয়স–উপযুক্ত কিনা এবং যে কন্টেন্টটি দেখতে যাচ্ছেন তা বৈধ ও নিরাপদ প্ল্যাটফর্মে আছে কিনা তা নিশ্চিত হয়ে নিন।
+          ইন্টারনেটের ব্যবহার অত্যন্ত সংবেদনশীল। যেকোনো কন্টেন্ট দেখার আগে এর <strong>বয়স–উপযুক্ততা</strong>, <strong>সম্মতি (consent)</strong> এবং <strong>আইন</strong>—এই তিনটি বিষয়ে সতর্ক থাকা জরুরি। আপনি বয়স–উপযুক্ত কিনা এবং যে কন্টেন্টটি দেখতে যাচ্ছেন তা বৈধ ও নিরাপদ প্ল্যাটফর্মে আছে কিনা তা নিশ্চিত হয়ে নিন।
         </p>
         <p>
           ব্যক্তিগত গোপনীয়তা (privacy) রক্ষা করুন, অচেনা কোনো লিংকে ক্লিক না করে সোর্স যাচাই করুন, এবং সন্দেহজনক সাইটে ব্যক্তিগত তথ্য দেবেন না।
-          অনলাইন নিরাপত্তাই সবচেয়ে বড় অগ্রাধিকার—নিজের ও অন্যের সম্মান সবার আগে।
+          অনলাইন নিরাপত্তাই সবচেয়ে বড় অগ্রাধিকার—নিজের ও অন্যের সম্মান সবার আগে।
         </p>
         <p>
-          এই সেকশনের উদ্দেশ্য শিক্ষামূলক/সচেতনতামূলক নির্দেশনা দেওয়া—এখানে অশালীন, অবৈধ বা শোষণমূলক কোনো কন্টেন্টের প্রচার করা হয় না। আমাদের যে কনটেন্ট এগুলো বিভিন্ন জায়গা এবং বিভিন্ন ভাইরাল ভিডিও গ্রুপ থেকে নেওয়া.! যদি কখনো আপনার পরিচিত কারো সাথে ভিডিও মিলে যায় আমাদের সাথে যোগাযোগ করলেই ভিডিওটি সাথে সাথেই রিমুভ করা হবে এবং সচেতনতার দিক থেকে যতটা সম্ভব সাহায্য করা হবে.! "ধন্যবাদ"
+          এই সেকশনের উদ্দেশ্য শিক্ষামূলক/সচেতনতামূলক নির্দেশনা দেওয়া—এখানে অশালীন, অবৈধ বা শোষণমূলক কোনো কন্টেন্টের প্রচার করা হয় না। আমাদের যে কনটেন্ট এগুলো বিভিন্ন জায়গা এবং বিভিন্ন ভাইরাল ভিডিও গ্রুপ থেকে নেওয়া.! যদি কখনো আপনার পরিচিত কারো সাথে ভিডিও মিলে যায় আমাদের সাথে যোগাযোগ করলেই ভিডিওটি সাথে সাথেই রিমুভ করা হবে এবং সচেতনতার দিক থেকে যতটা সম্ভব সাহায্য করা হবে.! "ধন্যবাদ"
         </p>
       </article>
     </section>
   </main>
   
   <footer>
-    © <span id="year"></span> টাইমার ফ্লো • এক ধাপেই চূড়ান্ত গন্তব্য
+    © <span id="year"></span> টাইমার ফ্লো • এক ধাপেই চূড়ান্ত গন্তব্য
   </footer>
   
   <noscript>
