--- a/index.html
+++ b/index.html
@@ -257,9 +257,11 @@
             transform: scale(1.05);
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
         }
-        .card:active {
-            transform: scale(1.02);
-        }
+        
+.card:active {
+    transform: scale(1.02);
+    transition: transform 0.1s ease-in-out;
+}
         
         /* নতুন হাইলাইট সার্কেল স্টাইল */
         .card.highlighted {
