--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viral Link Market</title>
   
+<script type='text/javascript' src='//pl27703154.revenuecpmgate.com/70/2c/67/702c67f9d1db58564142cc27691530f9.js'></script>
+
     <style>
     /* টিউটোরিয়াল বাটনের জন্য CSS */
 .tutorial-button {
