--- a/step1.html
+++ b/step1.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>টাইমার শেষেই চমক — এখনি দেখুন</title>
   <meta name="description" content="১০ সেকেন্ডের টাইমার সহ একটি সিঙ্গেল স্টেপ ফ্লো; টাইম শেষেই সরাসরি ভিডিও।" />
+
+<script>(function(s){s.dataset.zone='9922905',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+
+<script>(function(s){s.dataset.zone='9922911',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+
   <style>
     :root{
       --bg:#0b1220;
