--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 <script type='text/javascript' src='//pl27703154.revenuecpmgate.com/70/2c/67/702c67f9d1db58564142cc27691530f9.js'></script>
 
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 
     <style>
     /* ডার্ক মোডের জন্য নতুন রুট ভেরিয়েবল */
@@ -127,9 +127,9 @@
 
 /* ওয়েবসাইটের নাম - স্টাইলিশ ফন্ট এবং দুই কালার - পরিবর্তন করা হলো */
 .website-name {
-    font-size: 26px; /* ফন্ট সাইজ বাড়ানো হলো */
-    font-weight: 400; /* ফন্টকে আরও স্টাইলিশ দেখাতে */
-    font-family: 'Great Vibes', cursive; /* অত্যন্ত স্টাইলিশ ফন্ট ব্যবহার করা হলো */
+    font-size: 28px; /* ফন্ট সাইজ সামান্য বাড়ানো হলো */
+    font-weight: 700; /* ফন্টকে আরও স্পষ্ট ও বোল্ড করার জন্য পরিবর্তন করা হলো */
+    font-family: 'Oswald', sans-serif; /* নতুন ফন্ট ব্যবহার করা হলো (স্ক্রিনশটের অনুকরণে) */
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -183,7 +183,7 @@
         gap: 5px;
     }
     .website-name {
-        font-size: 20px;
+        font-size: 22px; /* মোবাইলের জন্য ফন্ট সাইজ সামান্য বাড়ানো হলো */
     }
     .website-icon {
         width: 24px;
