--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="bn">
 <head>
@@ -6,8 +7,6 @@
     <title>Viral Link Market (Dark Mode)</title>
   
 <script type='text/javascript' src='//pl27703154.revenuecpmgate.com/70/2c/67/702c67f9d1db58564142cc27691530f9.js'></script>
-
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 
     <style>
     /* ডার্ক মোডের জন্য নতুন রুট ভেরিয়েবল */
@@ -111,32 +110,30 @@
     min-width: 0;
 }
 
-/* লিংক আইকন (ওয়েবসাইট আইকন) - পরিবর্তন করা হলো */
+/* লিংক আইকন (ওয়েবসাইট আইকন) */
 .website-icon {
-    width: 28px; /* আইকনের সাইজ সামান্য বড় করা হলো */
-    height: 28px;
+    width: 25px; /* আইকনের সাইজ ছোট করা হলো */
+    height: 25px;
 }
 
 .website-icon svg {
-    fill: none; /* ফিলের পরিবর্তে স্ট্রোক ব্যবহার করা হলো */
-    stroke: #fff; /* স্ট্রোক কালার সাদা */
-    stroke-width: 2; /* স্ট্রোক উইডথ সেট করা হলো */
+    fill: #fff;
     width: 100%;
     height: 100%;
 }
 
-/* ওয়েবসাইটের নাম - স্টাইলিশ ফন্ট এবং দুই কালার - পরিবর্তন করা হলো */
+/* ওয়েবসাইটের নাম - স্টাইলিশ ফন্ট এবং দুই কালার */
 .website-name {
-    font-size: 28px; /* ফন্ট সাইজ সামান্য বাড়ানো হলো */
-    font-weight: 700; /* ফন্টকে আরও স্পষ্ট ও বোল্ড করার জন্য পরিবর্তন করা হলো */
-    font-family: 'Oswald', sans-serif; /* নতুন ফন্ট ব্যবহার করা হলো (স্ক্রিনশটের অনুকরণে) */
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Georgia', serif; /* স্টাইলিশ ফন্ট */
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .name-part-1 {
-    color: #FFD700; /* Secret - গোল্ডেন কালার */
+    color: #ffc107; /* Secret - হলুদ */
 }
 
 .name-part-2 {
@@ -183,11 +180,11 @@
         gap: 5px;
     }
     .website-name {
-        font-size: 22px; /* মোবাইলের জন্য ফন্ট সাইজ সামান্য বাড়ানো হলো */
+        font-size: 16px;
     }
     .website-icon {
-        width: 24px;
-        height: 24px;
+        width: 20px;
+        height: 20px;
     }
     .social-icon {
         width: 20px;
@@ -919,9 +916,8 @@
 <div class="header">
     <div class="header-left">
         <div class="website-icon">
-             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"/>
-                <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"/>
+             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-14v2.5c0 .28.22.5.5.5h1c.28 0 .5-.22.5-.5V6h-2zm0 3v2.5c0 .28.22.5.5.5h1c.28 0 .5-.22.5-.5V9h-2zm0 3v2.5c0 .28.22.5.5.5h1c.28 0 .5-.22.5-.5V12h-2zm5 1c0 .55-.45 1-1 1s-1-.45-1-1 .45-1 1-1 1 .45 1 1zm-3-5c0 .55-.45 1-1 1s-1-.45-1-1 .45-1 1-1 1 .45 1 1z" />
             </svg>
         </div>
         <div class="website-name">
