--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="bn">
 <head>
@@ -7,6 +6,8 @@
     <title>Viral Link Market (Dark Mode)</title>
   
 <script type='text/javascript' src='//pl27703154.revenuecpmgate.com/70/2c/67/702c67f9d1db58564142cc27691530f9.js'></script>
+
+    <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
 
     <style>
     /* ডার্ক মোডের জন্য নতুন রুট ভেরিয়েবল */
@@ -125,19 +126,19 @@
 /* ওয়েবসাইটের নাম - স্টাইলিশ ফন্ট এবং দুই কালার */
 .website-name {
     font-size: 20px;
-    font-weight: 700;
-    font-family: 'Georgia', serif; /* স্টাইলিশ ফন্ট */
+    font-weight: 400; /* Fugaz One ফন্টটি এমনিতেই বোল্ড, তাই ফন্ট-ওয়েট কমানো হলো */
+    font-family: 'Fugaz One', cursive; /* স্টাইলিশ ফন্ট: Fugaz One */
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .name-part-1 {
-    color: #ffc107; /* Secret - হলুদ */
+    color: #FFD700; /* Secret - গোল্ডেন কালার (#FFD700) */
 }
 
 .name-part-2 {
-    color: #fff; /* Binodon - সাদা */
+    color: #fff; /* Binodon - সাদা কালার (#fff) */
 }
 
 
@@ -917,7 +918,7 @@
     <div class="header-left">
         <div class="website-icon">
              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-14v2.5c0 .28.22.5.5.5h1c.28 0 .5-.22.5-.5V6h-2zm0 3v2.5c0 .28.22.5.5.5h1c.28 0 .5-.22.5-.5V9h-2zm0 3v2.5c0 .28.22.5.5.5h1c.28 0 .5-.22.5-.5V12h-2zm5 1c0 .55-.45 1-1 1s-1-.45-1-1 .45-1 1-1 1 .45 1 1zm-3-5c0 .55-.45 1-1 1s-1-.45-1-1 .45-1 1-1 1 .45 1 1z" />
+                <path d="M17 7h-4V4h4c2.21 0 4 1.79 4 4v4h-2V8c0-1.1-.9-2-2-2zm-6 8H7c-1.1 0-2-.9-2-2V9h2V7H7c-2.21 0-4 1.79-4 4v4c0 2.21 1.79 4 4 4h4v-2zm-1 3H7c-1.1 0-2-.9-2-2V9h2V7h2v2h4v2H9c-.55 0-1-.45-1-1s.45-1 1-1h4v2H9c-1.66 0-3 1.34-3 3v2c0 1.1.9 2 2 2h3v-2z"/>
             </svg>
         </div>
         <div class="website-name">
