--- a/index.html
+++ b/index.html
@@ -924,8 +924,8 @@
     </div>
     
     <div class="header-right">
-        <a href="https://youtube.com/shorts/6O0ktfOu3xo?si=ZdQztPqYn8Zq8NTv" class="tutorial-button" target="_blank">
-            Tutorial Video
+        <a href="https://m.youtube.com/shorts/6O0ktfOu3xo" class="tutorial-button" target="_blank">
+            Tutorial Video 🔞
         </a>
 
         <div class="social-icons-container">
