--- a/index.html
+++ b/index.html
@@ -964,7 +964,8 @@
         <div class="container"></div>
 
 <div class="ad-container">
-    <div id="container-247476cdf6d68a31797ec615e7b10572"></div>
+    <script async="async" data-cfasync="false" src="//pl27703152.revenuecpmgate.com/247476cdf6d68a31797ec615e7b10572/invoke.js"></script>
+<div id="container-247476cdf6d68a31797ec615e7b10572"></div>
 </div>
         
         <div id="loading-sentinel" style="height: 1px;"></div>
