--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     .ad-container {
     width: 100%;
     box-sizing: border-box;
-    margin-top: 5px;
-    margin-bottom: -20px;
+    margin-top: 0px;
+    margin-bottom: -30px;
     text-align: center;
         
     }
@@ -967,7 +967,7 @@
 <div class="ad-container">
     <script async="async" data-cfasync="false" src="//pl27703152.revenuecpmgate.com/247476cdf6d68a31797ec615e7b10572/invoke.js"></script>
 <div id="container-247476cdf6d68a31797ec615e7b10572"></div>
-</div>
+</div
         
         <div id="loading-sentinel" style="height: 1px;"></div>
         <div id="pagination-container" class="pagination-container"></div>
