--- a/step1.html
+++ b/step1.html
@@ -36,25 +36,75 @@
       font: 15px/1.6 ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji";
       letter-spacing:.2px;
     }
-  
-    /* Sticky Header */
-    header{
-      position:sticky; top:0; z-index:50;
-      background: rgba(10,15,26,.7);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid rgba(255,255,255,.06);
+
+    /* নতুন হেডার সেকশনের স্টাইল */
+    .header {
+        background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+        color: #fff;
+        padding: 10px 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        position: relative;
+        overflow: hidden;
+        display: flex;
+        justify-content: space-between; 
+        align-items: center;
+        gap: 10px;
+        position: sticky; top:0; z-index:50;
+        backdrop-filter: blur(10px);
     }
-    .wrap{max-width:900px; margin:0 auto; padding: 10px 16px;}
-    .brand{
-      display:flex; gap:10px; align-items:center; padding:8px 0 6px;
+    .header-left {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        min-width: 0;
     }
-    .logo{
-      width:28px; height:28px; border-radius:8px;
-      background: conic-gradient(from 0deg, var(--brand), var(--brand-2), var(--brand) );
-      box-shadow: 0 0 0 6px rgba(124,179,255,.08), inset 0 0 18px rgba(255,255,255,.35);
+    .website-icon {
+        width: 25px; 
+        height: 25px;
     }
-    .title{font-weight:700; font-size:16px}
-    .subtitle{color:var(--muted); font-size:12px}
+    .website-icon svg {
+        fill: #fff;
+        width: 100%;
+        height: 100%;
+    }
+    .website-name {
+        font-size: 20px;
+        font-weight: 400; 
+        font-family: 'Fugaz One', cursive; 
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .name-part-1 {
+        color: #FFD700; 
+    }
+    .name-part-2 {
+        color: #fff; 
+    }
+    .header-right {
+        display: flex;
+        align-items: center;
+        gap: 10px; 
+        flex-shrink: 0; 
+    }
+    .social-icons-container {
+        display: flex;
+        gap: 5px; 
+    }
+    .social-icon {
+        display: block;
+        width: 25px; 
+        height: 25px;
+        transition: transform 0.2s ease;
+    }
+    .social-icon img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+    }
+    .social-icon:hover {
+        transform: scale(1.1);
+    }
   
     /* Main panel */
     .panel{
@@ -157,6 +207,18 @@
       .step-label{font-size:12px}
       .btn{font-size:14px}
     }
+    @media (min-width: 768px) {
+        .header { padding: 15px 40px; }
+        .website-name { font-size: 24px; }
+        .website-icon { width: 30px; height: 30px; }
+        .social-icon { width: 30px; height: 30px; }
+      }
+    @media (max-width: 767px) {
+        .header { padding: 8px 10px; gap: 5px; }
+        .website-name { font-size: 16px; }
+        .website-icon { width: 20px; height: 20px; }
+        .social-icon { width: 20px; height: 20px; }
+    }
   
     #container-247476cdf6d68a31797ec615e7b10572 + .article {
       margin-top: 1px;
@@ -166,14 +228,30 @@
 </head>
 <body>
   <a id="top" aria-hidden="true"></a>
-  <header>
-    <div class="wrap">
-      <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
-        <div>
-          <div class="title">Viral Link Market 🔞</div>
-          <div class="subtitle">"আনলক" সেকশন এবং গুরুত্বপূর্ণ নির্দেশনা" 📥</div>
-        </div>
+
+  <header class="header">
+      <div class="header-left">
+          <div class="website-icon">
+               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M17 7h-4V4h4c2.21 0 4 1.79 4 4v4h-2V8c0-1.1-.9-2-2-2zm-6 8H7c-1.1 0-2-.9-2-2V9h2V7H7c-2.21 0-4 1.79-4 4v4c0 2.21 1.79 4 4 4h4v-2zm-1 3H7c-1.1 0-2-.9-2-2V9h2V7h2v2h4v2H9c-.55 0-1-.45-1-1s.45-1 1-1h4v2H9c-1.66 0-3 1.34-3 3v2c0 1.1.9 2 2 2h3v-2z"/>
+              </svg>
+          </div>
+          <div class="website-name">
+              <span class="name-part-1">Secret</span><span class="name-part-2">Binodon</span>
+          </div>
+      </div>
+      <div class="header-right">
+          <div class="social-icons-container">
+              <a href="https://t.me/virallink_market" target="_blank" class="social-icon">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+              </a>
+              <a href="https://www.facebook.com/share/1CNyeZ9b4K/" target="_blank" class="social-icon">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/2021_Facebook_icon.svg" alt="Facebook">
+              </a>
+              <a href="https://wa.me/" target="_blank" class="social-icon">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+              </a>
+          </div>
       </div>
   </header>
   
